# minecraft-rust

./: .gitignore  Cargo.toml  README.md  TODO.md  stitch.py
assets/shaders/: voxel_material.wgsl
src/: blocks.rs  camera.rs  chunks.rs  gamestate.rs  lib.rs  main.rs  meshing.rs  saves.rs  types.rs  ui.rs  voxel_material.rs  world.rs
