[package]
name = "minecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "hdr"] }
bevy_core_pipeline = { version = "0.16.1" }
futures-util = "0.3.31"
noise = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
