[package]
name = "minecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["hdr"] }
bevy_core_pipeline = { version = "0.16.1" }
futures-util = "0.3.31"
noise = "0.9.0"
mimalloc = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1"
rand = "0.10.2"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
